<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">USB Device Info</string>
    
    <string name="app_acknowledgements">
    	Acknowledgements:\n
    	·All logos are the property of their respective owners.
    </string>
	
	<string name="app_copyright">Copyright A. Schillings, 2011</string>
	
	<string name="app_changelog">
		Changelog:\n
		·v0.0.1 First public release\n
		·v0.0.2 Added Interface and Endpoint resolution\n
		·v0.0.3 Databases can now be downloaded.\n
		·v0.0.4 Now also parses /sys/bus/usb/devices/ for those pesky devices android hides. Added export.\n
		·v0.0.5 Added support for small screen devices. Bugfixes and stability improvements.
	</string>

	<string name="app_notes" formatted="false">
		Notes:\n
		·To fully use  this application, you need to download copies of the Vendor ID Database, the Company Name Database and the Company logo zip file.\nTo do that, Press Menu->Update DBs. Keep in mind it is about 2.5MB.\n
		·The Vendor ID database is the one used by my "USB VEN/DEV Database" application. Updating in one application will also update the other\n
		·The VID/PID database is created by parsing the following file: http://www.linux-usb.org/usb.ids
	</string>
	
	<string name="label_menu_update_db">Update DBs</string>
	<string name="label_menu_quit">Quit</string>
	<string name="label_menu_about">About</string>
	<string name="label_menu_export">Export</string>
	
	<string name="label_tab_api">API</string>
	<string name="label_tab_linux">Linux</string>
	
	<string name="label_refresh">Refresh</string>
	<string name="label_no_results">No results</string>
    <string name="label_empty_list">No devices detected.\nPlug a device in and hit refresh</string>
        
    <string name="download_ok">Files successfully downloaded!</string>
    <string name="download_error">There was an error while downloading the files.</string>
    
     <string name="text_downloading_files">Downloading files...</string>
     
     <string name="url_usb_db">http://aschillings.co.uk/download/db/android_usb.db3</string>
     <string name="url_company_db">http://aschillings.co.uk/download/db/android_company.db3</string>
     <string name="url_company_logo_zip">http://aschillings.co.uk/download/db/company_logos.zip</string>
     
     <string name="sd_db_location_usb">/data/alt236/usb_db/</string>
     <string name="sd_db_name_usb">android_usb.db3</string>
     
     <string name="sd_db_location_company">/data/alt236/company_db/</string>
     <string name="sd_db_name_company">android_company.db3</string>
    
     <string name="sd_zip_location_company">/data/alt236/company_db/</string>
     <string name="sd_zip_name_company">company_logos.zip</string>
     
    <string name="text_copied">copied.</string>
    <string name="text_device_offline">Device offline</string>
	<string name="text_device_offline_instructions">The device seems to be offline.\nPlease enable either WiFi or Mobile Internet before continuing.</string>
	
	<string name="sd_error">SD Card Error</string>
	<string name="sd_not_available">Cannot write to the SD card. It is either read-only or unmounted.</string>
	
	<string name="text_nothing_to_search_for">Nothing to search for.</string>
	<string name="text_enter_search_parameters">Please enter some search parameters before continuing.</string>

	<string name="error_could_not_open_db">Could not open database!.</string>

	<string name="alert_update_db">You are about to download files which are about 2.5MB in size. The files will be downloaded on your SD card.\nDo you want to continue?</string>
	<string name="alert_db_not_found_title">Vendor Database not found</string>
	<string name="alert_db_not_found_instructions">To enable the resolution of Vendor and Device IDs you need to download a few files. To do that go to "Menu->Update DBs".</string>
	<string name="no_usb_device_selected_">No USB device selected.</string>
	<string name="usb_version_">USB Version:</string>
	<string name="speed_">Speed:</string>
	<string name="protocol_">Protocol:</string>
	<string name="maximum_power_">Maximum Power:</string>
	<string name="serial_number_">Serial Number:</string>
	<string name="address_">"Address        : "</string>
	<string name="number_">"Number         : "</string>
	<string name="direction_">"Direction      : "</string>
	<string name="type_">"Type           : "</string>
	<string name="poll_interval_">"Poll Interval  : "</string>
	<string name="max_packet_size_">"Max Packet Size: "</string>
	<string name="attributes_">"Attributes     : "</string>
	<string name="none">None</string>
	<string name="class_">Class:</string>
	<string name="interface_">Interface #</string>
	<string name="endpoint_">Endpoint:</string>
	<string name="device_path_">Device Path:</string>
	<string name="device_class_">Device Class:</string>
	<string name="vendor_id_">"Vendor ID: "</string>
	<string name="vendor_name_">"Vendor Name: "</string>
	<string name="product_id_">"Product ID: "</string>
	<string name="product_name_">"Product Name: "</string>
	<string name="interfaces">Interfaces</string>
	<string name="device_info">Device Info</string>
	<string name="vendor_name_reported_">"Vendor Name (reported): "</string>
	<string name="vendor_name_from_db_">"Vendor Name (from DB): "</string>
	<string name="product_name_reported_">"Product Name (reported): "</string>
	<string name="product_name_from_db_">"Product Name (from DB): "</string>
	<string name="share_result_via">Share result via:</string>
	<string name="logo">Logo</string>
	<string name="additional_info">Additional Info</string>
	
</resources>
